# lexrag

./: .gitignore  .ralph-prompt.md  CLAUDE.md  RALPH-INSTRUCTIONS.md  README.md  prd-rag-juridico-local.md  pyproject.toml
