[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexrag"
version = "1.0.0"
description = "Sistema RAG Jurídico Local para documentos tributários"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Pedrosa & Peixoto Advogados"}
]
keywords = ["rag", "legal", "documents", "chromadb", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # Document Processing
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "mammoth>=1.6.0",
    "easyocr>=1.7.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",

    # Chunking
    "langchain-text-splitters>=0.0.1",

    # MCP
    "mcp>=1.0.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
ollama = [
    "ollama>=0.1.0",
]

[project.scripts]
lexrag = "lexrag.cli:app"

[project.urls]
Homepage = "https://github.com/chapirousIA/lexrag"
Repository = "https://github.com/chapirousIA/lexrag"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lexrag" = ["py.typed"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
